--- a/lesson2/main.html
+++ b/lesson2/main.html
@@ -44,12 +44,11 @@
               this.setState({editing:true})
           }
           save=()=>{
-              var val=this.refs.newText.value
-              alert("the value will be stored as: "+val)
-              this.setState({editing:false})
+              this.props.onChange(this.refs.newText.value,this.props.id)
+              this.setState({editing: false})
           }
-          delete(){
-              alert('Deleting')
+          delete=(id)=>{
+              this.props.onRemove(this.props.id)
           }
           renderForm=()=>{
             return(
@@ -85,20 +84,39 @@
               super(props);
               this.state={
                   notes: [
-                      'Call Lakhan',
-                      'Give Prototype',
-                      'Submit Project',
-                       'Send Rahul Email'
+                      {id: 0,note: 'Call Lakhan'},
+                      {id: 1,note: 'Give Prototype'},
+                      {id: 2,note: 'Submit Project'},
+                      {id: 3,note: 'Send Lakhan Email'}
+                      
                   
                   ]
               }
           }
+          update=(newText,id)=>{
+              var notes=this.state.notes.map(
+                  note =>(note.id !== id) ?
+                  note:{
+                      ...note,
+                      note: newText
+                  }
+              )
+              this.setState({notes})
+          }
+          remove=( id )=>{
+              var notes=this.state.notes.filter(note => note.id !== id)
+              this.setState({note})
+          }
+          eachNote=(note) =>{
+            return (<Note key={note.id}
+                    id={note.id}
+                    onChange={this.update}
+                    onRemove={this.remove}>{note.note}</Note>)
+          }
           render(){
               return(
                   <div className="board">
-                  {this.state.notes.map((note,i)=>{
-                    return <Note key={i}>{note}</Note>
-                  })}
+                  {this.state.notes.map(this.eachNote)}
                   </div>
               )
           }
