--- a/lesson2/main.html
+++ b/lesson2/main.html
@@ -83,15 +83,22 @@
           constructor(props){
               super(props);
               this.state={
-                  notes: [
-                      {id: 0,note: 'Call Lakhan'},
-                      {id: 1,note: 'Give Prototype'},
-                      {id: 2,note: 'Submit Project'},
-                      {id: 3,note: 'Send Lakhan Email'}
-                      
-                  
-                  ]
+                  notes: []
               }
+          }
+          nextId=()=>{
+              this.uniqueId=this.uniqueId || 0
+              return this.uniqueId++
+          }
+          add=(text)=>{
+              var notes=[
+                  ...this.state.notes,
+                  {
+                      id: this.nextId() ,
+                      note: text
+                  }
+              ]
+              this.setState({notes})
           }
           update=(newText,id)=>{
               var notes=this.state.notes.map(
@@ -117,6 +124,7 @@
               return(
                   <div className="board">
                   {this.state.notes.map(this.eachNote)}
+                  <button onClick={()=>this.add()}>+</button>
                   </div>
               )
           }
