--- a/lesson2/main.html
+++ b/lesson2/main.html
@@ -103,7 +103,8 @@
           update=(newText,id)=>{
               var notes=this.state.notes.map(
                   note =>(note.id !== id) ?
-                  note:{
+                  note:
+                  {
                       ...note,
                       note: newText
                   }
@@ -112,7 +113,7 @@
           }
           remove=( id )=>{
               var notes=this.state.notes.filter(note => note.id !== id)
-              this.setState({note})
+              this.setState({notes})
           }
           eachNote=(note) =>{
             return (<Note key={note.id}
