--- a/lesson2/main.html
+++ b/lesson2/main.html
@@ -16,6 +16,7 @@
             border: 1px solid orange;
             box-shadow: 2px 6px 12px rgba(0, 0 ,0,0.2);
             text-align: center;
+            position: absolute;
             
         }
         textarea{
@@ -40,6 +41,15 @@
                 editing:false
             }
         }
+        componentWillMount=()=>{
+            this.style={
+                right: this.randomBetween(0,window.innerWidth-150,'px'),
+                top: this.randomBetween(0, window.innerHeight-150,'px')
+            }
+        }
+        randomBetween=(x,y,s)=>{
+            return (x+ Math.ceil(Math.random()*(y-x)))+5
+        }
           edit=()=>{
               this.setState({editing:true})
           }
@@ -52,7 +62,7 @@
           }
           renderForm=()=>{
             return(
-                <div class="note">
+                <div class="note" style={this.style}>
                 <textarea ref="newText"></textarea>
                 <button onClick={this.save}>Save</button>
                 </div> 
@@ -60,7 +70,7 @@
           }
           renderDisplay=()=>{
             return(
-                  <div className="note">
+                  <div className="note"style={this.style}>
                     <p>{this.props.children}</p>
                     <span>
                         <button onClick={this.edit}>Edit</button>
